--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/Tyler.csv filter=lfs diff=lfs merge=lfs -text
 data/Persona[[:space:]]Baseline.csv filter=lfs diff=lfs merge=lfs -text
+data/Persona_Baseline_System.csv filter=lfs diff=lfs merge=lfs -text
