--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,9 @@
 data/Tyler.csv filter=lfs diff=lfs merge=lfs -text
 data/Persona_Baseline_System.csv filter=lfs diff=lfs merge=lfs -text
-Original_Runs.csv filter=lfs diff=lfs merge=lfs -text
-Persona_Baseline_System.csv filter=lfs diff=lfs merge=lfs -text
-Chicago_Resident.csv filter=lfs diff=lfs merge=lfs -text
-Israeli_Citizen.csv filter=lfs diff=lfs merge=lfs -text
-Police_High.csv filter=lfs diff=lfs merge=lfs -text
-Police_Low.csv filter=lfs diff=lfs merge=lfs -text
+data/Original_Runs.csv filter=lfs diff=lfs merge=lfs -text
+data/Persona_Baseline_System.csv filter=lfs diff=lfs merge=lfs -text
+data/Chicago_Resident.csv filter=lfs diff=lfs merge=lfs -text
+data/Israeli_Citizen.csv filter=lfs diff=lfs merge=lfs -text
+data/Police_High.csv filter=lfs diff=lfs merge=lfs -text
+data/Police_Low.csv filter=lfs diff=lfs merge=lfs -text
 data/Persona_Baseline_User.csv filter=lfs diff=lfs merge=lfs -text
